Set position relative and remove ghostpane

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@ body {
 </style>
 
 <div id="box"></div>
-<div id="timeliner"></div>
+<div id="timeliner" style="margin-left: 200px"></div>
 <script src="timeliner.js"></script>
 <script>
 var target = {
